# slopSmith

./: .gitignore
.claude/: settings.local.json
rust4slopsmith/: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
rust4slopsmith/src/: caches.rs  config.rs  db.rs  main.rs  scan.rs  sidecar.rs  state.rs
rust4slopsmith/src/engine/: audio.rs  mod.rs  patcher.rs  psarc.rs  retune.rs  sloppak.rs  sng_vocals.rs  song.rs  tunings.rs
rust4slopsmith/src/routes/: audio.rs  favorites.rs  library.rs  loops.rs  mod.rs  plugins.rs  settings.rs  sloppak_files.rs  song.rs  static_files.rs  version.rs
rust4slopsmith/src/ws/: highway.rs  mod.rs  retune.rs
slopsmith/: .gitignore  server.py  server.sh
slopsmith-desktop/: .build-config.json  .gitmodules  THIRD_PARTY_LICENSES.md  WINDOWS_BUILD_REQUIREMENTS.md  compileExe.sh
slopsmith-desktop-0.2.8/: CONTRIBUTORS.md  tsconfig.json
slopsmith-desktop-0.2.8/.packages/: brew.txt
slopsmith-desktop-0.2.8/.specify/integrations/: claude.manifest.json  speckit.manifest.json
slopsmith-desktop-0.2.8/.specify/memory/: constitution.md
slopsmith-desktop-0.2.8/.specify/workflows/: workflow-registry.json
slopsmith-desktop-0.2.8/scripts/: build-macos.sh  build-release.sh
slopsmith-desktop-0.2.8/specs/001-desktop-app/: analyze.md
slopsmith-desktop-0.2.8/src/audio/: IRLoader.cpp  NAMProcessor.h  PitchDetector.cpp  SignalChain.h  VSTHost.cpp  VSTHost.h  VSTTrace.h
slopsmith-desktop-0.2.8/src/audio/Sandbox/: SubprocessHandle.cpp
slopsmith-desktop-0.2.8/src/main/: plugin-manager.ts  splash-preload.ts
slopsmith-desktop-0.2.8/src/renderer/plugin-manager/: plugin.json  screen.js
slopsmith-desktop/.github/workflows/: build.yml
slopsmith-desktop/.packages/: README.md  brew.txt
slopsmith-desktop/scripts/: build-audio.sh  build-macos.sh  build-rscli.sh  bundle-binaries.sh  setup-dev.sh
slopsmith-desktop/specs/001-desktop-app/: clarify.md  plan.md  spec.md  tasks.md
slopsmith-desktop/src/audio/: CMakeLists.txt  IRLoader.h  NAMProcessor.cpp  NodeAddon.cpp  PitchDetector.h  SignalChain.cpp  VSTHost.cpp
slopsmith-desktop/src/audio/Sandbox/: Protocol.cpp  SandboxedProcessor.cpp
slopsmith-desktop/src/main/: ipc-channels.ts  preload.ts  soundfont-manager.ts
slopsmith-desktop/src/renderer/: screen.js  settings.html
slopsmith-desktop/src/renderer/plugin-manager/: screen.html
slopsmith/lib/: audio.py  gp2rs.py  sloppak_convert.py
slopsmith/scripts/: convert_gp_to_sloppak.py  make_test_songs.py  split_stems.py
slopsmith/static/: app.js  freeplay.js  index.html  style.css
slopsmithRust/: .gitignore  Cargo.toml  Dockerfile
slopsmithRust/src/: audio.rs  cdlc_builder.rs  db.rs  gp2midi.rs  gp2rs.rs  lib.rs  main.rs  midi_import.rs  patcher.rs  plugins.rs  psarc.rs  retune.rs  sng_vocals.rs  song.rs  tunings.rs
